[package]
name = "anynav-mod"
version = "0.1.0"
description = "anynav"
authors = ["yydcnjjw"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
keybinding-mod = { path = "../keybinding" }
cmder-mod = { path = "../cmder" }
config-mod = { path = "../config" }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all"] }

anyhow = "1.0"
log = "0.4"
sea-orm = { version = "^0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }

tokio = "1"
async-trait = "0.1"
once_cell = "1.13"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
# default = [ "custom-protocol" ]
default = [ ]

# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
