[package]
name = "cmder-mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mrpc = { path = "../../../mrpc/mrpc" }
keybinding-mod = { path = "../keybinding" }

log = "0.4"
tokio = { version = "1" }
anyhow = "1.0"

async-trait = "0.1"
