[package]
name = "config-mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mrpc = { path = "../../../mrpc/mrpc" }

toml = "0.4"

log = "0.4"
tokio = { version = "1" }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
