[package]
name = "config-mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
service = []

[dependencies]
mrpc = { path = "../../../mrpc/mrpc" }
anyhow = "1.0"
thiserror = "1.0"
serde-error = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.4"
log = "0.4"
tokio = { version = "1", default_features = false }

[dev-dependencies]
tempfile = "3.0"
