[package]
name = "dict-mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmder-mod = { path = "../cmder" }
config-mod = { path = "../config" }

mdict = { path = "../../crates/mdict" }

clap = { version = "3.0.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

log = "0.4"
tokio = { version = "1" }
anyhow = "1.0"
async-trait = "0.1"
