[package]
name = "dict-mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmder-mod = { path = "../cmder" }
config-mod = { path = "../config" }

mdict = { path = "../../crates/mdict" }

clap = { version = "3.0.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

tokio = "1"
tokio-stream = { version = "0.1", features = ["fs"] }
async-trait = "0.1"

anyhow = "1.0"
log = "0.4"
